ncep/gov.noaa.nws.ncep.ui.nsharp/src/gov/noaa/nws/ncep/ui/nsharp/natives/NsharpNative.java

    	
    	void define_parcel(short flag, float pres);
    	/**
    	 * Original signature : <code>float delta_t(float*)</code><br>
    	 * <i>native declaration : line 27</i><br>
    	 * @deprecated use the safer methods {@link #delta_t(java.nio.FloatBuffer)} and {@link #delta_t(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z7delta_tPf", "?delta_t@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float delta_t(FloatByReference param);
    	/**
    	 * Original signature : <code>float ehi(float, float)</code><br>
    	 * <i>native declaration : line 28</i>
    	 */
    	//@Mangling({"_Z3ehiff", "?ehi@@YAMMM@Z"}) 
    	float ehi(float cape, float hel);
    	/**
    	 * Original signature : <code>grab_level(float)</code><br>
    	 * <i>native declaration : line 29</i>
    	 */
    	//@Mangling({"_Z10grab_levelf", "?grab_level@@YAXM@Z"}) 
    	int grab_level(float pres);
    	/**
    	 * Original signature : <code>float k_index(float*)</code><br>
    	 * <i>native declaration : line 30</i><br>
    	 * @deprecated use the safer methods {@link #k_index(java.nio.FloatBuffer)} and {@link #k_index(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z7k_indexPf", "?k_index@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float k_index(FloatByReference param);
    	/**
    	 * Original signature : <code>float lapse_rate(float*, float, float)</code><br>
    	 * <i>native declaration : line 31</i><br>
    	 * @deprecated use the safer methods {@link #lapse_rate(java.nio.FloatBuffer, float, float)} and {@link #lapse_rate(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z10lapse_ratePfff", "?lapse_rate@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float lapse_rate(FloatByReference param, float lower, float upper);
    	/**
    	 * Original signature : <code>void low_inv(float*, float*)</code><br>
    	 * <i>native declaration : line 32</i><br>
    	 * @deprecated use the safer methods {@link #low_inv(java.nio.FloatBuffer, java.nio.FloatBuffer)} and {@link #low_inv(com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z7low_invPfPf", "?low_inv@@YAXPAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	void low_inv(FloatByReference inv_mb, FloatByReference inv_dC);
     	/**
    	 * Original signature : <code>float max_temp(float*, float)</code><br>
    	 * <i>native declaration : line 33</i><br>
    	 * @deprecated use the safer methods {@link #max_temp(java.nio.FloatBuffer, float)} and {@link #max_temp(com.sun.jna.ptr.FloatByReference, float)} instead
    	 */
    	//@Mangling({"_Z8max_tempPff", "?max_temp@@YAMPAMM@Z"}) 
    	//@java.lang.Deprecated 
    	float max_temp(FloatByReference param, float mixlyr);
    	/**
    	 * Original signature : <code>float mean_dwpt(float*, float, float)</code><br>
    	 * <i>native declaration : line 34</i><br>
    	 * @deprecated use the safer methods {@link #mean_dwpt(java.nio.FloatBuffer, float, float)} and {@link #mean_dwpt(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z9mean_dwptPfff", "?mean_dwpt@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_dwpt(FloatByReference param, float lower, float upper);
    	/**
    	 * Original signature : <code>float mean_mixratio(float*, float, float)</code><br>
    	 * <i>native declaration : line 35</i><br>
    	 * @deprecated use the safer methods {@link #mean_mixratio(java.nio.FloatBuffer, float, float)} and {@link #mean_mixratio(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z13mean_mixratioPfff", "?mean_mixratio@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_mixratio(FloatByReference param, float lower, float upper);
   	/**
    	 * Original signature : <code>float mean_relhum(float*, float, float)</code><br>
    	 * <i>native declaration : line 36</i><br>
    	 * @deprecated use the safer methods {@link #mean_relhum(java.nio.FloatBuffer, float, float)} and {@link #mean_relhum(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z11mean_relhumPfff", "?mean_relhum@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_relhum(FloatByReference param, float lower, float upper);
     	/**
    	 * Original signature : <code>float mean_theta(float*, float, float)</code><br>
    	 * <i>native declaration : line 37</i><br>
    	 * @deprecated use the safer methods {@link #mean_theta(java.nio.FloatBuffer, float, float)} and {@link #mean_theta(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z10mean_thetaPfff", "?mean_theta@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float mean_theta(FloatByReference param, float lower, float upper);
    	/**
    	 * Original signature : <code>float Mean_WBtemp(float*, float, float)</code><br>
    	 * <i>native declaration : line 38</i><br>
    	 * @deprecated use the safer methods {@link #Mean_WBtemp(java.nio.FloatBuffer, float, float)} and {@link #Mean_WBtemp(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z11Mean_WBtempPfff", "?Mean_WBtemp@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float Mean_WBtemp(FloatByReference param, float lower, float upper);
     	/**
    	 * Original signature : <code>void mix_height(float*, float*, float*, float*, float*, float*, float*, short)</code><br>
    	 * <i>native declaration : line 39</i><br>
    	 * @deprecated use the safer methods {@link #mix_height(java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer, short)} and {@link #mix_height(com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, short)} instead
    	 */
    	//@Mangling({"_Z10mix_heightPfPfPfPfPfPfPfi", "?mix_height@@YAXPAMPAMPAMPAMPAMPAMPAMH@Z"}) 
    	//@java.lang.Deprecated 
    	void mix_height(FloatByReference mh_mb, FloatByReference mh_drct, FloatByReference mh_sped, FloatByReference mh_dC, FloatByReference mh_lr, FloatByReference mh_drct_max, FloatByReference mh_sped_max, short flag);
    	/**
    	 * Original signature : <code>float old_cnvtv_temp(float*)</code><br>
    	 * <i>native declaration : line 42</i><br>
    	 * @deprecated use the safer methods {@link #old_cnvtv_temp(java.nio.FloatBuffer)} and {@link #old_cnvtv_temp(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z14old_cnvtv_tempPf", "?old_cnvtv_temp@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float old_cnvtv_temp(FloatByReference param);
    	/**
    	 * Original signature : <code>float parcel(float, float, float, float, float, _parcel*)</code><br>
    	 * <i>native declaration : line 43</i>
    	 */
    	//@Mangling({"_Z6parcelfffffP7_parcel", "?parcel@@YAMMMMMMPA7_parcel@Z"}) 
    	float parcel(float lower, float upper, float pres, float temp, float dwpt, NsharpLibrary._parcel pcl);
    	/**
    	 * Original signature : <code>float parcelx(float, float, float, float, float, _parcel*)</code><br>
    	 * <i>native declaration : line 45</i>
    	 */
    	//@Mangling({"_Z7parcelxfffffP7_parcel", "?parcelx@@YAMMMMMMPA7_parcel@Z"}) 
    	float parcelx(float lower, float upper, float pres, float temp, float dwpt, NsharpLibrary._parcel pcl);
    	/**
    	 * Original signature : <code>float precip_water(float*, float, float)</code><br>
    	 * <i>native declaration : line 47</i><br>
    	 * @deprecated use the safer methods {@link #precip_water(java.nio.FloatBuffer, float, float)} and {@link #precip_water(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z12precip_waterPfff", "?precip_water@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float precip_water(FloatByReference param, float lower, float upper);
    	/**
    	 * Original signature : <code>float Rogash_QPF(float*)</code><br>
    	 * <i>native declaration : line 48</i><br>
    	 * @deprecated use the safer methods {@link #Rogash_QPF(java.nio.FloatBuffer)} and {@link #Rogash_QPF(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z10Rogash_QPFPf", "?Rogash_QPF@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float Rogash_QPF(FloatByReference param);
